i should fix error in parsing like
