# api/models/like.go
@@ -8,6 +8,11 @@ type Like struct {
 }
 
 type CreateOrUpdateLikeRequest struct {
-	Status bool `json:"status"`
+	Status bool  `json:"status"`
 	PostID int64 `json:"post_id" binding:"required"`
+}
+
+type LikesAndDislikesCount struct {
+	Likes    int64 `json:"likes"`
+	Dislikes int64 `json:"dislikes"`
 }
